fix bug 571491: completion text alignment is off on the command line

--- a/plugins/supported/command_line/resources/cli.less
+++ b/plugins/supported/command_line/resources/cli.less
@@ -154,7 +154,7 @@ and even bespin. Also the more complex layouts could be cached
   background: transparent;
   outline: none; border: 0;
   box-shadow: none; -moz-box-shadow: none; -webkit-box-shadow: none;
-  padding: 0;
+  padding: 4px 0 0 0;
   width: 100%;
 }
 .cmd_line input.cmd_input:focus {
